--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,6 @@ before_script:
 
 test:
   script:
-    - pwd
-    - cd ../ && mv  role-resolv hudecof.resolv && cd hudecof.resolv
-    - pwd
+    - cd ../ && rm -rf hudecof.resolv &&  mv role-resolv hudecof.resolv && cd hudecof.resolv
     - molecule test
     - cd ../ && mv  hudecof.resolv role-resolv && cd role-resolv
