--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 install:
 - pip install ansible==2.2.1.0
 - pip install docker-py
-- pip install molecule
+- pip install molecule==1.20.3
 
 script:
 - cd ../ && mv ansible_resolv hudecof.resolv && cd hudecof.resolv
