--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,13 @@
+---
 image: hudecof/ansible-tests:latest
 
 before_script:
- - pip install -U setuptools
- - pip install wheel
- - pip install ansible==2.2.1.0
- - pip install docker-py
- - pip install molecule==1.20.3
+  - pip install -U setuptools
+  - pip install wheel
+  - pip install ansible
+  - pip install docker-py
+  - pip install molecule
 
 test:
   script:
-    - cd ../ && rm -rf hudecof.resolv &&  mv role-resolv hudecof.resolv && cd hudecof.resolv
-    - molecule test
-    - cd ../ && mv  hudecof.resolv role-resolv && cd role-resolv
+    - molecule test --scenario-name cnc
