--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,12 @@ before_install:
 - sudo apt-get install -o Dpkg::Options::="--force-confold" --force-yes -y docker-engine
 
 install:
-- pip install ansible==2.2.1.0
+- pip install ansible
 - pip install docker-py
-- pip install molecule==1.20.3
+- pip install molecule
 
 script:
-- cd ../ && mv ansible_resolv hudecof.resolv && cd hudecof.resolv
-- molecule test
+- molecule test --scenario-name github
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
