refacterd added packages tasks

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 # defaults file for resolv
 
+resolv_packages: "{{ __resolv_packages }}"
+
 resolv_file: /etc/resolv.conf
 
 resolv_domain: null
